# Esprit-PIDS-4DS4-2026-QOS_Buddy

./: .gitignore  README.md  analytics.py  charts.py  data_loader.py  llm_engine.py  main.py  ml_autoencoder_pro.py  ml_isolation_forest_pro.py  ml_kmeans_pro.py  prompt_builder.py  quick_predict.py  report_export.py  requirements.txt  sample_selector.py  streamlit_app.py  usecase_10_adaptive_narrative.py  usecase_1_narrative.py  usecase_2_qa.py  usecase_3_root_cause.py  usecase_4_insights.py  usecase_5_dl_explainer.py  usecase_6_tone_adaptation.py  usecase_7_benchmark.py  usecase_8_audio_report.py  usecase_9_digest_email.py
Deployment/optimization agent/: .dockerignore  .env.example  .gitignore  README_PHASE3.md  file.md  pyproject.toml
Deployment/optimization agent/deployment/: __init__.py  actions.py  contracts.py  data.py  hybrid_optimizer.py  inject.py  main.py  mlops.py  model_loader.py  policy_gate.py  preflight.py  release.py  runtime.py  simulation.py  telemetry_cache.py  tracing.py
Deployment/optimization agent/frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts
Deployment/optimization agent/scripts/: export_notebook_models.py  launch_mlflow_ui.py  near_live_driver.py  verify_frontend_build.py  write_frontend_build_meta.py
Deployment/optimization agent/testing_tools/: push_near_live.py  scenarios.json
Deployment/optimization agent/tests/: test_access.py  test_agent_loop.py  test_api.py  test_policy_gate.py  (+8 more)
Deployment/qos-buddy/: .dockerignore  .env.example  .gitignore  README.md  RUNBOOK.md  docker-compose.yml  package-demo.ps1  pyproject.toml  start.ps1  stop.ps1
(+589 files in other folders)
