[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qos-buddy"
version = "3.0.0"
description = "QoS Buddy NOC deployment surface for policy-gated remediation workflows."
readme = "README_PHASE3.md"
requires-python = ">=3.11"
dependencies = [
    "cloudpickle>=3.0,<4",
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "joblib>=1.4,<2",
    "mlflow>=2.20,<3",
    "numpy>=1.26,<3",
    "pandas>=2.2,<3",
    "redis>=5.0,<6",
    "requests>=2.32,<3",
    "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["deployment*"]
