[project]
name = "qos-buddy"
version = "0.1.0"
description = "Qosmic NOC Command Center — unified deployment for QOS-Buddy agents."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "redis>=5.0",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "python-socketio>=5.11",
  "httpx>=0.27",
  "orjson>=3.9",
  "structlog>=24.1",
  "python-jose[cryptography]>=3.3",
  "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["contracts*", "bus*", "gateway*"]

[tool.ruff]
line-length = 100
target-version = "py311"
